--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,15 +17,14 @@ repos:
       - id: check-added-large-files
 
   - repo: https://github.com/psf/black
-    rev: e026c93888f91a47a9c9f4e029f3eb07d96375e6  # frozen: 24.1.1
+    rev: 6fdf8a4af28071ed1d079c01122b34c5d587207a # frozen: 24.2.0
     hooks:
       - id: black
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: f12edd9c7be1c20cfa42420fd0e6df71e42b51ea  # frozen: v4.0.0-alpha.8
+    rev: ffb6a759a979008c0e6dff86e39f4745a2d9eac4 # frozen: v3.1.0
     hooks:
       - id: prettier
-        entry: env PRETTIER_LEGACY_CLI=1 prettier # temporary fix for https://github.com/prettier/prettier/issues/15742
         files: \.(html|md|yml|yaml)
         args: [--prose-wrap=preserve]
 
@@ -35,7 +34,7 @@ repos:
       - id: blacken-docs
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: 1bbebc88c6925a4e56fd5446b830b12c38c1c24a # frozen: v3.15.0
+    rev: df17dfa3911b81b4a27190b0eea5b1debc7ffa0a # frozen: v3.15.1
     hooks:
       - id: pyupgrade
         args: [--py38-plus]
@@ -49,10 +48,7 @@ repos:
         files: "pyproject.toml|requirements/.*\\.txt|tools/generate_requirements.py"
 
 ci:
-  # This ensures that pr's aren't autofixed by the bot, rather you call
-  # the bot to make the fix
   autofix_prs: false
   autofix_commit_msg: |
     '[pre-commit.ci 🤖] Apply code format tools to PR'
-  # Update hook versions every month (so we don't get hit with weekly update pr's)
-  autoupdate_schedule: monthly
+  autoupdate_schedule: quarterly
