Combine CLIs into a single one, exposing as an entrypoint.

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,7 +1,7 @@
 - id: numpydoc-validation
   name: numpydoc-validation
   description: This hook validates that docstrings in committed files adhere to numpydoc standards.
-  entry: validate-docstrings
+  entry: numpydoc lint
   require_serial: true
   language: python
   types: [python]
