--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,10 @@ jobs:
         os: [Ubuntu]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         sphinx-version:
-          ["sphinx==6.0", "sphinx==6.2", "sphinx==7.0", "sphinx>=7.2"]
+          ["sphinx==6.0", "sphinx==6.2", "sphinx==7.0", "'sphinx>=7.2,<7.3'"]
+        exclude:
+          - python-version: "3.8"
+            sphinx-version: "'sphinx>=7.2,<7.3'"
     steps:
       - uses: actions/checkout@v4
 
