--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,16 +13,18 @@ keywords = [
     'numpy',
 ]
 classifiers = [
-    'Development Status :: 4 - Beta',
+    'Development Status :: 5 - Production/Stable',
     'Environment :: Plugins',
+    'Intended Audience :: Developers',
     'License :: OSI Approved :: BSD License',
-    'Topic :: Documentation',
+    'Operating System :: OS Independent',
     'Programming Language :: Python',
     'Programming Language :: Python :: 3',
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3.12',
+    'Topic :: Documentation',
 ]
 dependencies = [
     'sphinx>=6',
