--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
             sphinx-version: "sphinx" # version shouldn't really matter here
     defaults:
       run:
-        shell: bash -e
+        shell: bash -euo pipefail {0}
     steps:
       - uses: actions/checkout@v4
 
