--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,11 +17,6 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
 
-  - repo: https://github.com/psf/black
-    rev: 3702ba224ecffbcec30af640c149f231d90aebdb # frozen: 24.4.2
-    hooks:
-      - id: black
-
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: ffb6a759a979008c0e6dff86e39f4745a2d9eac4 # frozen: v3.1.0
     hooks:
@@ -29,16 +24,12 @@ repos:
         types_or: [yaml, toml, markdown, css, scss, javascript, json]
         args: [--prose-wrap=preserve]
 
-  - repo: https://github.com/adamchainz/blacken-docs
-    rev: 960ead214cd1184149d366c6d27ca6c369ce46b6 # frozen: 1.16.0
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: "f8a3f8c471fb698229face5ed7640a64900b781e" # frozen: v0.4.4
     hooks:
-      - id: blacken-docs
-
-  - repo: https://github.com/asottile/pyupgrade
-    rev: 12af25eb252deaaecb6b259df40d01f42e716dc3 # frozen: v3.15.2
-    hooks:
-      - id: pyupgrade
-        args: [--py38-plus]
+      - id: ruff
+        args: ["--fix", "--show-fixes", "--exit-non-zero-on-fix"]
+      - id: ruff-format
 
   - repo: local
     hooks:
