--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,6 +2,6 @@
   name: numpydoc-validation
   description: This hook validates that docstrings in committed files adhere to numpydoc standards.
   entry: numpydoc lint
-  require_serial: true
+  require_serial: false
   language: python
   types: [python]
