--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,12 +95,12 @@ jobs:
 
       - name: Install
         run: |
-          python -m pip install .[test,doc]
+          python -m pip install --pre .[test,doc]
           pip list
 
       - name: Run test suite
         run: |
-          pytest -v --pyargs .
+          pytest -v --pyargs numpydoc
 
       - name: Test coverage
         run: |
