--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel setuptools
           python -m pip install codecov
-          python -m pip install ${{ matrix.sphinx-version }}
+          python -m pip install "${{ matrix.sphinx-version }}"
           python -m pip list
 
       - name: Install
