--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -99,8 +99,8 @@ jobs:
           python -m pip install . --pre --group test --group doc
           pip list
 
-      - name: "Check File Existence"
-        uses: thebinaryfelix/check-file-existence-action@v1
+      - name: Check File Existence
+        uses: thebinaryfelix/check-file-existence-action@1.0.0
         with:
           files: numpydoc/tests/hooks/test_validate_hook.py
 
