--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,7 +95,7 @@ jobs:
 
       - name: Install
         run: |
-          python -m pip install . --group test --group doc
+          python -m pip install --pre . --group test --group doc
           pip list
 
       - name: Run test suite
