--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,18 +11,13 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  test-oldsphinx:
     runs-on: ${{ matrix.os }}-latest
     strategy:
       matrix:
         os: [Ubuntu]
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
-        sphinx-version:
-          ["sphinx==6.0", "sphinx==6.2", "sphinx==7.0", "sphinx>=7.3"]
-        include:
-          - os: Windows
-            python-version: "3.12"
-            sphinx-version: "sphinx" # version shouldn't really matter here
+        python-version: ["3.10", "3.11"]
+        sphinx-version: ["sphinx<7", "sphinx<8"]
     defaults:
       run:
         shell: bash -eo pipefail {0}
@@ -65,7 +60,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt install texlive texlive-latex-extra latexmk dvipng
-        if: runner.os == 'Linux'
 
       - name: Build documentation
         run: |
