--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
   pypi-publish:
     needs: sdist_wheel
     name: upload release to PyPI
-    if: github.repository_owner == 'numpy' && startsWith(github.ref, 'refs/tags/v') && github.actor == 'jarrodmillman' && always()
+    if: github.repository_owner == 'numpy' && startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     # Specifying a GitHub environment is optional, but strongly encouraged
     environment: release
