--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -182,3 +182,42 @@ jobs:
       - name: Test coverage
         run: |
           codecov
+
+  test-sdist:
+    runs-on: ${{ matrix.os }}-latest
+    strategy:
+      matrix:
+        os: [ubuntu]
+        python-version: ["3.14"]
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Python setup
+        uses: actions/setup-python@v6
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Setup environment
+        run: |
+          python -m pip install --upgrade pip wheel setuptools build
+          python -m pip list
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --group test --group doc
+          pip list
+
+      - name: Build numpydoc
+        run: python -m build
+
+      - name: Install numpydoc from source tarball
+        run: |
+          python -m pip install --no-binary numpydoc dist/*.tar.gz
+          pip list
+
+      - name: Run test suite
+        # NOTE: Move outside of source directory to prevent any file pickup -
+        # ensure all tests/tests files are derived from the package *only*
+        run: |
+          mkdir foo && cd foo
+          pytest -v --pyargs numpydoc
